<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfoTravel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="boton_nuevo">Nuevo</string>
    <string name="title_activity_travel">TravelActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="city">Ciudad</string>
    <string name="country">Pais</string>
    <string name="year">Año</string>
    <string name="nota">nota</string>
    <string name="botonGuardar">Guardar</string>
    <string name="menu_new_travel">Nuevo viaje</string>
    <string name="action_nuevo">com.example.EditActivity.Nuevo</string>
    <string name="share">Compartir</string>
    <string name="button_foto">Foto</string>
    <string name="imgViaje">Imagen Viaje</string>
    <string name="menu_edit_travel">Editar</string>
    <string name="menu_delete_travel">Borrar</string>
    <string name="title_actionbar_list">List Travel</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_guardar_imagen">Guardar Foto</string>
    <string name="title_nuevo_viaje">Nuevo viaje</string>
    <string name="title_editar_viaje">Modificar viaje</string>
    <string name="descr_overflow_button">Acciones</string>
    <string name="tab_lista_viajes">List Travels</string>
    <string name="tab_about">About</string>
    <string name="title_activity_tab_navigation">TabNavigationActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_list_travel_fragement">ListTravelFragement</string>
    <string name="autor">Autor: Juan de Dios Arjona</string>
    <string name="nombre_app">App: Tavel</string>
    <string name="year_app">Año: 2013</string>

</resources>
