<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   
    <item 
        android:id="@+id/menu_save"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_guardar"
        android:orderInCategory="100"/>
    
    <item 
        android:id="@+id/menu_save_image"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_guardar_imagen"
        android:orderInCategory="200"/>
    
     <item android:id="@+id/share"
        android:title="@string/share"
        android:showAsAction="collapseActionView" 
        android:orderInCategory="400"
      />
     
       <group android:id="@+id/share2"
        android:title="@string/share"
        android:showAsAction="ifRoom" 
        android:orderInCategory="300"
        android:icon="@android:drawable/ic_menu_share">
		<item android:id="@+id/mp3"
			android:title="Prueba" />
		<item android:id="@+id/mp4"
			android:title="Prueba2" />
		</group>
</menu>
